--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -1,4 +1,8 @@
 .header{
+    display: flex;
+    align-items: center;
     background-color: lightgreen;
     justify-content: space-between;
+    padding-left: 10px;
+    padding-right: 10px;
 }
