--- a/src/component/Header/Header.css
+++ b/src/component/Header/Header.css
@@ -6,3 +6,12 @@
     padding-left: 10px;
     padding-right: 10px;
 }
+.nav-item{
+    text-decoration: none;
+    font-weight: 600;
+    gap: 20px;
+}
+.nav-item a{
+    text-decoration: none;
+    margin-left: 20px;
+}
